--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,9 @@
+html,
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 150%;
+}
+
 #welcome {
     z-index: 2000;
     width: 100%;
@@ -31,9 +37,17 @@ body {
     padding: 0;
 }
 
+
+/* Welcome and loading screen */
+
 #welcome {
     overflow: hidden;
     text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
 }
 
 #welcome .logo {
@@ -42,6 +56,14 @@ body {
     animation-duration: 4000ms;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
+}
+
+#welcome #startBtns {
+    position: absolute;
+    left: 1em;
+    right: 1em;
+    bottom: 1em;
+    text-align: right;
 }
 
 @keyframes spin {
@@ -60,4 +82,26 @@ body {
         transform: rotate(360deg);
         width: 130%;
     }
+}
+
+
+/*
+Buttons
+*/
+
+button.button {
+    display: block;
+    border: solid 1px #333333;
+    border-radius: 3em 0 0 0;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#d82496+0,ead320+100 */
+    background: #d82496;
+    /* Old browsers */
+    background: -moz-linear-gradient(-45deg, #d82496 0%, #ead320 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #d82496 0%, #ead320 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, #d82496 0%, #ead320 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#d82496', endColorstr='#ead320', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
 }
