--- a/static/styles.css
+++ b/static/styles.css
@@ -178,5 +178,6 @@ button.button {
     padding-left:1.4em;
     margin-left:0.5em;
     margin-right:0.5em;
-    box-shadow: 0.3em 0.3em 0.4em 0.05em #944D72;
+    box-shadow: 0.3em 0.3em 0.4em 0.05em rgba(70, 0, 56, 0.6);
+
 }
