--- a/static/styles.css
+++ b/static/styles.css
@@ -45,19 +45,31 @@ nav#menuBar {
     position: absolute;
     right: 0;
     top: 0;
+    text-align: right;
 }
 
 #menuBar .hamburger {
-    background: url("menu.svg");
-    width: 24px;
-    height: 24px;
     border: none;
+    margin: 0 0.1em 0.1em 0.1em;
+    padding: 0;
+    font-size: 130%;
+    background: none;
+    color: white;
 }
 
 #menuBar ul {
     display: block;
     background: #ead320;
     z-index: 1500;
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
+}
+
+#menuBar ul li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 
