--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,12 @@
+html,
+body,
+main {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 70%;
@@ -10,11 +19,23 @@ body {
 }
 
 
+/* app */
+
+#app {
+    margin: 0;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
+
+
 /* Welcome and loading screen */
 
 #welcome {
     z-index: 1;
-    overflow-x: hidden;
+    overflow: hidden;
     text-align: center;
     width: 100%;
     height: 100%;
@@ -118,9 +139,16 @@ body {
 #map,
 #notInAreaBanner,
 #fog {
-    height: 100%;
-    width: 100%;
     position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+#notInAreaBanner {
+    z-index: 1100;
+    background-color: rgba(50, 50, 50, 1);
 }
 
 #fog {
