--- a/static/styles.css
+++ b/static/styles.css
@@ -140,14 +140,22 @@ body {
 #notInAreaBanner,
 #fog {
     position: absolute;
-    top: 4em;
     bottom: 0;
-    left: 3em;
-    right: 3em;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: #201C40;
 }
 
 #notInAreaBanner {
     z-index: 1100;
+}
+
+#notInAreaBannerWrapper {
+    position: absolute;
+    top: 4em;
+    left: 3em;
+    right: 3em;
     background-color: white;
     object-position: center;
     height: 40%;
