--- a/static/styles.css
+++ b/static/styles.css
@@ -31,6 +31,18 @@ body {
 }
 
 
+/* achivemetns */
+
+#achivements {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    min-height: 100%;
+}
+
+
 /* Welcome and loading screen */
 
 #welcome {
