--- a/static/styles.css
+++ b/static/styles.css
@@ -15,6 +15,7 @@ body {
     text-transform: uppercase;
     /* padding: 2em; */
     background-color: #201C40;
+    overflow: hidden;
 }
 
 
@@ -37,8 +38,8 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    width: 100%;
-    min-height: 100%;
+    bottom: 0;
+    overflow-y: auto;
 }
 
 
@@ -415,7 +416,7 @@ button.button:focus {
 }
 
 .achievement .mystery {
-    display: block;
+    display: none;
 }
 
 .achievement.mystery .mystery {
@@ -423,15 +424,15 @@ button.button:focus {
 }
 
 .achievement.mystery .known {
-    display: block;
+    display: none;
 }
 
 .achievement.got.mystery .known {
-    display: initial;
+    display: block;
 }
 
 .achievement.got.mystery .mystery {
-    display: block;
+    display: none;
 }
 
 .achievement.mystry .achievement p,
