--- a/static/styles.css
+++ b/static/styles.css
@@ -34,6 +34,7 @@ body {
 /* achivemetns */
 
 #achivements {
+    background-color: #201C40;
     position: absolute;
     top: 0;
     left: 0;
@@ -44,6 +45,10 @@ body {
 
 
 /* Welcome and loading screen */
+
+#loading {
+    color: black;
+}
 
 #welcome {
     z-index: 1;
