--- a/static/styles.css
+++ b/static/styles.css
@@ -37,6 +37,31 @@ body {
     color: black;
 }
 
+
+/* with thanks - https://alistapart.com/article/creating-intrinsic-ratios-for-video */
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#imgWrapper {
+    transition: all 0.5s;
+    width: 100%;
+    margin: auto;
+}
+
 #welcome {
     z-index: 1;
     overflow: hidden;
@@ -52,9 +77,10 @@ body {
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     top: 10%;
+    transition: all 0.5s;
 }
 
-#welcome div {
+#welcome .controlls {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -137,6 +163,13 @@ body {
         left: -25%;
         transform: rotate(360deg);
         width: 150%;
+    }
+}
+
+@keyframes shrink {
+    100% {
+        left: 40%;
+        width: 20%;
     }
 }
 
