--- a/static/styles.css
+++ b/static/styles.css
@@ -187,7 +187,7 @@ body {
 }
 
 #map,
-#notInAreaBanner,
+#mapInfoBanner,
 #fog {
     position: absolute;
     bottom: 0;
@@ -201,11 +201,11 @@ body {
     background: #2B2564
 }
 
-#notInAreaBanner {
+#mapInfoBanner {
     z-index: 1100;
 }
 
-#notInAreaBannerWrapper {
+#mapInfoBannerWrapper {
     position: absolute;
     top: 4em;
     left: 3em;
@@ -222,7 +222,7 @@ body {
     margin-left: -1em;
 }
 
-#bannerTitle {
+.bannerTitle {
     background-color: #f7a754;
     /* Old browsers */
     background: -moz-linear-gradient(90deg, #f7a754 0%, #d85297 100%);
@@ -245,6 +245,18 @@ body {
     color: white;
     padding-right: 0.8em;
     font-size: 100%;
+}
+
+#not_in_area {
+    display: none;
+}
+
+.not_in_area #not_in_area {
+    display: block;
+}
+
+.not_in_area #map_intro_text {
+    display: none;
 }
 
 #fog {
