--- a/static/styles.css
+++ b/static/styles.css
@@ -48,7 +48,7 @@ body {
 .videoWrapper {
     position: relative;
     padding-bottom: 0%;
-    margin-top:2em;
+    margin-top: 2em;
     transition: padding 1s;
     /* 16:9 
     padding-bottom:56.25%
@@ -298,7 +298,7 @@ nav#menuBar {
     top: 0;
     text-align: right;
     border-bottom-left-radius: 3em;
-    background-color: #ffffff ;
+    background-color: #ffffff;
     ;
     box-shadow: 0.2em 0.2em 0.2em 0.04em rgba(70, 0, 56, 0.3);
 }
@@ -456,11 +456,15 @@ button.button:focus {
     width: 96%;
 }
 
-.leaflet-popup-content p {
+.leaflet-popup-content p,
+.leaflet-popup-content li {
     margin: 0 0;
-    padding: 0 1em 1em 1.5em;
     text-transform: none;
     color: gray;
+}
+
+.leaflet-popup-content p {
+    padding: 0 1em 1em 1.5em;
 }
 
 
@@ -476,7 +480,7 @@ button.button:focus {
 /* achivemetns */
 
 #achivements {
-    color: gray;
+    color: white;
     background-color: #201C40;
     position: absolute;
     top: 0;
